<resources>
    <string name="app_name">仓库盘点</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">s登陆</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="login_username">登陆账号</string>
    <string name="login_password">密码</string>
    <string name="login_sing_in">登陆</string>
    <string name="login_checkmachine_number">盘点机编号：$1</string>
    <string name="login_version_number">版本号：$1</string>
    <string name="login_wifi_import">WIFI 导入数据</string>
    <string name="login_man_import">手工导入数据</string>

</resources>
